@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fl_Preferences.H now doesn't include windows.h any more
+	  (Windows only, STR #2173).
 	- Fl_Window::draw() now doesn't reset its x/y-coordinates to 0
 	  anymore before drawing itself and its children.
 	- All draw() methods of widgets are now protected (STR #2142).
